fix(engine): use jdk 11 compliant stream .toList
.toList is not available in jdk 11